@@ -1,6 +1,8 @@
 Revision history for Red
 
 {{$NEXT}}
+    - Fix pre-compiled experimental features
+    - Fix formatter spelling
 
 0.1.31  2021-02-14T21:04:28Z
     - Add experimental refreshable
